# cogfin

./: CLAUDE.md
libgnucash/opencog/: CMakeLists.txt
libgnucash/opencog/test/: CMakeLists.txt
